# fe5211_project

./: Private_Asset_Returns.ipynb  README.md  pyproject.toml
code/: GARCH.py  data_preprocess.ipynb  dvine_cvar_pipeline.ipynb  get_data_yfinance.ipynb  riskfolio_CVar.ipynb  rvine_cvar_pipeline.ipynb  univariate_distribution.ipynb  visualizations.py
data/: processed_returns.csv  quarterly_return_SPY_AGG.csv  quarterly_returns.csv
